--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,6 +13,7 @@
         <ul>
           <li><a href="#">Inicio</a></li>
           <li><a href="#">Sobre Nosotros</a></li>
+          <li><a href="#">Servicios</a></li>
           <li><a href="#">Contacto</a></li>
         </ul>
       </nav>
@@ -32,6 +33,23 @@
           Somos un equipo comprometido en brindar soluciones innovadoras a
           problemas complejos.
         </p>
+      </section>
+
+      <section class="services-section">
+        <h2>Nuestros Servicios</h2>
+        <ul>
+          <li>Consultoría en Tecnología</li>
+          <li>Desarrollo de Software Personalizado</li>
+          <li>Capacitación y Talleres</li>
+        </ul>
+      </section>
+
+      <section class="testimonials-section">
+        <h2>Testimonios</h2>
+        <blockquote>
+          "El Proyecto Phoenix transformó nuestra manera de trabajar. ¡Altamente recomendado!"
+          <cite>- Cliente Satisfecho</cite>
+        </blockquote>
       </section>
     </main>
     <footer class="main-footer">
